# pkcs11-proxy

./: .gitignore  CMakeLists.txt  LICENSE  TODO.md  config.h.in  gck-rpc-conf.c  gck-rpc-conf.h  gck-rpc-daemon-standalone.c  gck-rpc-dispatch.c  gck-rpc-layer.h  gck-rpc-module.c  gck-rpc-private.h  gck-rpc-tls-psk.c  gck-rpc-tls-psk.h  gck-rpc-util.c  syscall-reporter.c  syscall-reporter.h
.github/workflows/: ci.yml
tests/: requirements.txt  setup-softhsm2.sh  softhsm2.conf.in  test_pkcs11_proxy.py
